<resources>
    <string name="app_name">DSS Matiari ROUND 8</string>
    <string name="open_surveillance_form">OPEN SURVEILLANCE FORM</string>
    <string name="open_mwra_registration_form">OPEN MWRA REGISTRATION FORM</string>
    <string name="open_mwra_followup_form">OPEN MWRA FOLLOWUP FORM</string>
    <string name="open_onhold_form">UPDATE ONHOLD FORM</string>
    <string name="open_followup_form">OPEN FOLLOW-UP FORM</string>
    <string name="folder_not_created" translatable="false"> Folder Not Created </string>
    <string name="demographicinformation_mainheading">Demographic Information</string>
    <string name="marriedwomenregistration_mainheading">Married Women Registration</string>
    <string name="marriedwomenfollowup_mainheading"> Married Women Followup</string>
    <string name="pregnancy_mainheading">Pregnancy Information (If previously pregnant)</string>
    <string name="outcome_mainheading">Outcome Registration Information </string>
    <string name="outcomefup_mainheading">Outcome Followup Information </string>
    <string name="upd_db_form" translatable="false"> updateDB(Form):\t </string>
    <string name="upd_db_error" translatable="false"> Updating Database… ERROR! </string>
    <string name="db_excp_error" translatable="false"> Database Exception... ERROR! </string>
    <string name="upd_db" translatable="false"> Updating Database...\t </string>
    <string name="fail_db_upd" translatable="false"> Failed to Update Database! </string>
    <string name="backPress" translatable="false"> Back Press Not Allowed </string>
    <string name="invalid_response" translatable="false"> Invalid Response </string>
    <string name="network_error" translatable="false">No Internet!</string>
    <string name="network_error_desc" translatable="false">Please check your internet connection and try again</string>
    <string name="need_permission" translatable="false">Need Permission!</string>
    <string name="need_permission_desc" translatable="false">The app needs permission to use this feature</string>
    <string name="goto_settings" translatable="false">GOTO SETTINGS</string>
    <string name="incorrect_device_date" translatable="false">APP DATE ERROR_Incorrect device date_%s_%s</string>
    <string name="incorrect_device_date_desc" translatable="false">Your device date is\n%s\n\nServer date &amp; time is\n%s</string>
    <string name="invalid_date" translatable="false">Invalid Date!</string>
    <string name="date_error_popup_desc" translatable="false">Your device date is invalid! Adjust date &amp; time and try again.</string>
    <string name="adjust_date" translatable="false">Adjust Date</string>
    <string name="updated_version" translatable="false">Please download the updated version of the app\nVer. %s.%d</string>
    <string name="download_data" translatable="false">Download Data</string>
    <string name="upload_data" translatable="false">Upload Data</string>
    <string name="upload_photos" translatable="false">Upload Photos</string>
    <string name="sync_upload_photo_success" translatable="false">Photo uploaded successfully</string>
    <string name="sync_upload_duplicate" translatable="false">Duplicate photo</string>
    <string name="sync_upload_success" translatable="false">Total: %d | Synced: %d | Duplicates: %d \n\nMessage: %s</string>
    <string name="successful" translatable="false">Successful</string>
    <string name="process_failed" translatable="false">Process Failed</string>
    <string name="sync_error" translatable="false">Error: %s</string>
    <string name="sync_download_success" translatable="false">Received: %d</string>
    <string name="no_new_records_to_upload" translatable="false">No new records to upload</string>
    <string name="status" translatable="false">Status: %s</string>
    <string name="change_pass" translatable="false">Change Password</string>
    <string name="change_pass_desc" translatable="false">Your new password must be different from previous password</string>
    <string name="old_password" translatable="false">Old Password</string>
    <string name="new_password" translatable="false">New Password</string>
    <string name="confirm_password" translatable="false">Confirm Password</string>
    <string name="username_pass_same" translatable="false">Username and Password cannot be same</string>
    <string name="incorrect_old_password" translatable="false">Incorrect old password</string>
    <string name="current_previous_password_cannot_same" translatable="false">Password cannot not be same as previous.</string>
    <string name="password_creation_criteria" translatable="false">Password must have both alphabets and numbers</string>
    <string name="secured_pass_not_generated" translatable="false">Secured password not generated</string>
    <string name="password_reset_successful" translatable="false">Password has been reset successfully</string>
    <string name="somethings_not_right" translatable="false">Something\'s not right. Please try again.</string>
    <string name="field_empty_error" translatable="false">Input field cannot be empty</string>
    <string name="invalid_password_new" translatable="false">Password must be >%d characters</string>
    <string name="password_not_matched" translatable="false">Password did not match</string>
    <string name="reset_password" translatable="false">Reset Password</string>
    <string name="btnSync">Download Data</string>
    <string name="btnUpload">Upload Data</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="splashText"> </string>
    <string name="splashText2">  </string>
    <string name="check_pending_forms">CHECK PENDING FORMS</string>
    <string name="open_new_form">OPEN NEW FORM</string>
    <string name="records_summary">Records Summary</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="only_for_testing">ONLY FOR TESTING</string>
    <string name="database">Database</string>
    <string name="no"> No </string>
    <string name="dkn"> Don’t Know </string>
    <string name="none"> No one </string>
    <string name="never"> Never</string>
    <string name="na"> Applicable /Not Available  </string>
    <string name="nap"> Not Applicable </string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="incorrect_username_or_password" translatable="false">Incorrect Username or Password</string>
    <string name="confirmPassword" translatable="false">Confirm Password</string>
    <string name="btnResetPassword" translatable="false">Reset Password</string>
    <string name="oldPassword" translatable="false">Old Password</string>
    <string name="newPassword" translatable="false">New Password</string>
    <string name="invalid_password"> Invalid Credentials </string>
    <string name="username_required"> Username is required. </string>
    <string name="nav">Not Available </string>
    <string name="ref"> Refused </string>
    <string name="other"> Other </string>
    <string name="specify"> Please explain </string>
    <string name="year"> Year </string>
    <string name="month"> Month </string>
    <string name="weeks"> Week </string>
    <string name="days"> Day </string>
    <string name="hours"> Hour </string>
    <string name="minutes"> Minutes </string>
    <string name="kg"> Kilograms </string>
    <string name="km"> Kilometers </string>
    <string name="cm"> cm </string>
    <string name="in"> Inch </string>
    <string name="rupees">  Rupees </string>
    <string name="num"> Number </string>
    <string name="name"> Name </string>
    <string name="roundNo"> Round No. </string>
    <string name="contactnum">Contact Number </string>
    <string name="checkHHpresent"> The name of head of the household corresponds to the line listing data.</string>
    <string name="newHHheadname"> Name of new head of the household </string>
    <string name="ra_lon">Longitude</string>
    <string name="ra_lat">Latitude</string>
    <string name="image_not_taken" translatable="false">Image not taken</string>
    <string name="no_photos_taken" translatable="false">No photos were taken</string>
    <string name="no_photos_to_upload" translatable="false">No photos to upload</string>
    <string name="no_image_found" translatable="false">No image found</string>
    <string name="dir_not_created" translatable="false">Directory not created</string>
    <string name="ra01">Date of visit </string>
    <string name="ra02">CHW Code  </string>
    <string name="ra03">CHW Name </string>
    <string name="ra04">Team leader name </string>
    <string name="ra05" translatable="false">Team leader Code </string>
    <string name="ra06">Union council </string>
    <string name="ra07">Village</string>
    <string name="ra08">Mohalla</string>
    <string name="ra09">Household Number</string>
    <string name="ra10">Household ID</string>
    <string name="ra11">Detail Address with land mark</string>
    <string name="ra12">Name of Head of Household </string>
    <string name="ra13">Caste</string>
    <string name="ra14">Name of Respondent </string>
    <string name="ra15">Does this household have women aged 14–49 years?</string>
    <string name="ra15a">Yes</string>
    <string name="ra15b">No</string>
    <string name="ra16">Unique Family Number</string>
    <string name="ra17">Family Members</string>
    <string name="ra17_a">0 to 04 Years</string>
    <string name="ra17_b">05 to 13 Years</string>
    <string name="a17_c">14 to 49 Years </string>
    <string name="ra17_d">&gt;49 Years</string>
    <string name="ra17_a1">Male</string>
    <string name="ra17_a2">Female</string>
    <string name="ra17_b1">Male</string>
    <string name="a17_c1">Male</string>
    <string name="ra17_d1">Male</string>
    <string name="ra17_b2">Female</string>
    <string name="a17_c2">Female</string>
    <string name="a17_1">Male</string>
    <string name="a17_2">Female</string>
    <string name="a17_3">Transgender</string>
    <string name="ra17_d2">Female</string>
    <string name="ra18">No. of Women aged 14 – 49 years</string>
    <string name="ra19">Household Visit Status</string>
    <string name="ra19a">Completed</string>
    <string name="ra19b">Locked / no eligible respondent </string>
    <string name="ra19c">Refused </string>
    <string name="ra19e">No WRA 14 – 49 </string>
    <string name="ra19g">Temporary Migrated out </string>
    <string name="ra19f">Permanently Refused</string>
    <string name="ra19h">Permanently Migrated out</string>
    <string name="ra19d">Other (specify)</string>
    <string name="rb01">Unique WRA#</string>
    <string name="rb02">Name of Women</string>
    <string name="rb03">Husband/Father Name</string>
    <string name="rb03h">Husband Name</string>
    <string name="rb03f">Father Name</string>
    <string name="rb03a">Contact Number</string>
    <string name="rb04">Date of Birth</string>
    <string name="rb04_info">DD/MM/YYYY Use 98/98/9998 if not known</string>
    <string name="rb05">Age in years</string>
    <string name="rb06">Marital Status</string>
    <string name="rb0601">Married</string>
    <string name="rb0602">Divorce</string>
    <string name="btnLogin">Login</string>
    <string name="change_language">Click to change language</string>
    <string name="english">English</string>
    <string name="sindhi">سنڌي</string>
    <string name="btnDownloadUserData">Download User Data</string>
    <string name="downloadDataDesc">Please download the data before login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="app_name_short">DSS Matiari</string>
    <string name="round_2">ROUND 8</string>
</resources>