<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.dss_matiari.ui.LoginActivity" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_3"
        android:elevation="@dimen/_5sdp"
        android:gravity="center"
        android:paddingStart="@dimen/_35sdp"
        android:paddingTop="@dimen/_30sdp"
        android:paddingEnd="@dimen/_35sdp"
        android:paddingBottom="@dimen/_5sdp">

        <ImageView
            android:id="@+id/appLogoIV"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_alignTop="@+id/loginLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_minus30sdp"
            android:background="@drawable/bg_circle_white_filled"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/app_icon_4"
            tools:ignore="ContentDescription" />

        <RelativeLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_app_color_bordered"
            android:elevation="-1dp"
            android:gravity="center_horizontal"
            android:paddingStart="@dimen/_15sdp"
            android:paddingTop="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingBottom="@dimen/_17sdp">

            <TextView
                android:id="@+id/labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name_short"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/titleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/round_2"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/usernameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/bg_rounded_app_color_bordered">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_toStartOf="@+id/usernameIV"
                    android:background="@null"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingStart="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_12sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_9ssp" />

                <ImageView
                    android:id="@+id/usernameIV"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="@drawable/ic_user"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/usernameLayout"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_rounded_app_color_bordered">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_toStartOf="@+id/showPassword"
                    android:background="@null"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingStart="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_12sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_9ssp" />

                <ImageButton
                    android:id="@+id/showPassword"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="@drawable/ic_locked"
                    android:onClick="@{callback::onShowPasswordClick}"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/teamLeaderLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordLayout"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_rounded_app_color_bordered">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/teamleader"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_toStartOf="@+id/teamleaderIV"
                    android:background="@null"
                    android:maxLines="1"
                    android:paddingStart="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_12sdp" />

                <ImageView
                    android:id="@+id/teamleaderIV"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="@drawable/ic_arrow"
                    android:backgroundTint="@color/colorPrimary"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/countryLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/teamLeaderLayout"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="0.6"
                    android:text="@string/change_language"
                    android:textColor="@color/blackOverlay"
                    android:textSize="@dimen/_9ssp"
                    android:textStyle="bold" />

                <ToggleButton
                    android:id="@+id/countrySwitch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:background="@drawable/bg_toggle_button"
                    android:checked="true"
                    android:padding="10dp"
                    android:radius="2dp"
                    android:textColor="@color/colorPrimary"
                    android:textOff="@string/english"
                    android:textOn="@string/sindhi"
                    android:textSize="@dimen/_9ssp" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@+id/countryLayout"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_rounded_app_color_filled"
                android:elevation="@dimen/_2sdp"
                android:onClick="attemptLogin"
                android:text="@string/btnLogin"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/loginProgress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/btnSignin"
                android:layout_alignBottom="@+id/btnSignin"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorPrimary"
                android:indeterminateTintMode="src_atop"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/pbarMR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/downloadDataLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginLayout"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_rounded_orange_bordered"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="@dimen/_15sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingBottom="@dimen/_8sdp">

            <TextView
                android:id="@+id/downloadDataDescTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/downloadDataDesc"
                android:textColor="@color/blackOverlay"
                android:textSize="@dimen/_9ssp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/syncData"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_rounded_app_sec_color_filled"
                android:elevation="@dimen/_2sdp"
                android:onClick="@{callback::onSyncDataClick}"
                android:text="@string/btnDownloadUserData"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtinstalldate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="Ver."
                android:textColor="@color/blackOverlay"
                android:textSize="@dimen/_8ssp" />

        </LinearLayout>
    </RelativeLayout>
</layout>